Updated docs as NT acl support is now on by default. param/loadparm.c: NT acl support is now on by default. source/smbd/reply.c: Only set global_client_caps on first sessionsetup. source/smbd/trans2.c: Use global_client_caps instead of client type to determine if we do the unicode hack. Jeremy.

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -3895,9 +3895,11 @@ system and the Samba server with this option must also be a
 .IP 
 This boolean parameter controls whether \fBsmbd\fP
 will attempt to map UNIX permissions into Windows NT access control lists\&.
-This is currently an experimental option and is off by default\&.
 .IP 
 \fBDefault:\fP
+\f(CW	nt acl support = yes\fP
+.IP 
+\fBExample:\fP
 \f(CW	nt acl support = no\fP
 .IP 
 .IP "\fBnt pipe support (G)\fP" 
