--- a/appl/telnet/ChangeLog
+++ b/appl/telnet/ChangeLog
@@ -72,6 +72,11 @@ Thu Jul 23 20:29:05 1998  Johan Danielsson  <joda@emma.pdc.kth.se>
 
 	* libtelnet/kerberos5.c: use krb5_verify_authenticator_checksum
 
+Mon Jul 13 22:00:09 1998  Assar Westerlund  <assar@sics.se>
+
+	* telnet/commands.c (tn): don't advance hostent->h_addr_list, use
+ 	a copy instead
+
 Wed May 27 04:19:17 1998  Assar Westerlund  <assar@sics.se>
 
 	* telnet/sys_bsd.c (process_rings): correct call to `stilloob'
