--- a/appl/push/ChangeLog
+++ b/appl/push/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr  7 23:40:00 1999  Assar Westerlund  <assar@sics.se>
+
+	* Makefile.in: fix names of hesiod variables
+
 Wed Mar 24 04:37:04 1999  Assar Westerlund  <assar@sics.se>
 
 	* Makefile.am (pfrom): fix typo
