--- a/appl/popper/ChangeLog
+++ b/appl/popper/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  8 15:07:11 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* pop_pass.c: remove definition of KRB_VERIFY_USER (moved to
+ 	config.h)
+
 Thu Mar 18 12:55:42 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* pop_pass.c: define KRB_VERIFY_SECURE if not defined
