--- a/lib/editline/ChangeLog
+++ b/lib/editline/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 10 23:01:18 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* complete.c (rl_complete_filename): return if there were no
+ 	matches
+
 Thu Apr  8 15:08:25 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.in: snprintf
