--- a/lib/des/ChangeLog
+++ b/lib/des/ChangeLog
@@ -1,3 +1,7 @@
+Sat Apr 10 23:02:30 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
+
+	* destest.c: fixes for crays
+
 Thu Apr  1 11:26:38 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* Makefile.am: noinst_PROGRAMS -> check_PROGRAMS; add TESTS; don't
