*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5923 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/rsh/ChangeLog
+++ b/appl/rsh/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-11  Assar Westerlund  <assar@sics.se>
+
+	* rsh.c: new option --forwardable. use print_version
+	
 Sat Apr 10 17:10:55 1999  Assar Westerlund  <assar@sics.se>
 
 	* rshd.c (setup_copier): use `socketpair' instead of `pipe'.  Some
