*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5930 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/appl/login/ChangeLog
+++ b/appl/login/ChangeLog
@@ -1,3 +1,7 @@
+1999-04-11  Assar Westerlund  <assar@sics.se>
+
+	* login.c (main): use print_version
+
 Thu Apr  8 15:03:55 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* login.c: remove definition of KRB_VERIFY_USER et.al. (moved to
