--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,15 @@ Tue Apr 13 18:38:05 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 	* lib/kadm5/create_s.c (kadm5_s_create_principal): create v4 salts
  	for all DES keys
 
+1999-04-12  Assar Westerlund  <assar@sics.se>
+
+	* lib/krb5/get_cred.c (init_tgs_req): re-structure a little bit
+
+	* lib/krb5/get_cred.c (init_tgs_req): some more error checking
+
+	* lib/krb5/generate_subkey.c (krb5_generate_subkey): check return
+	value from malloc
+
 Sun Apr 11 03:47:23 1999  Johan Danielsson  <joda@hella.pdc.kth.se>
 
 	* lib/krb5/krb5.conf.5: update to reality
