Updated docs. Added NT_Security info document and referenced it in SWAT. Added comment about "wide linke" negatively affecting performance. Jeremy.

--- a/docs/manpages/smb.conf.5
+++ b/docs/manpages/smb.conf.5
@@ -6300,6 +6300,10 @@ directory tree exported by the server are always allowed; this
 parameter controls access only to areas that are outside the directory
 tree being exported\&.
 .IP 
+Note that setting this parameter can have a negative effect on your
+server performance due to the extra system calls that Samba has to
+do in order to perform the link checks\&.
+.IP 
 \fBDefault:\fP
 \f(CW 	wide links = yes\fP
 .IP 
