--- a/docs/manpages/testparm.1
+++ b/docs/manpages/testparm.1
@@ -24,6 +24,11 @@ If the optional host name and host IP address are specified on the
 command line, this test program will run through the service entries
 reporting whether the specified host has access to each service\&.
 .PP 
+If \fBtestparm\fP finds an error in the \fBsmb\&.conf\fP
+file it returns an exit code of 1 to the calling program, else it returns
+an exit code of 0\&. This allows shell scripts to test the output from
+\fBtestparm\fP\&.
+.PP 
 .SH "OPTIONS" 
 .PP 
 .IP 
