*** empty log message ***
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@5970 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-17  Assar Westerlund  <assar@sics.se>
+
+	* make-aclocal: removed.  Not used anymore, being replaced by
+	aclocal from automake.
+
 Fri Apr  9 20:37:18 1999  Assar Westerlund  <assar@sics.se>
 
 	* shared-libs.m4: quote $@
