--- a/kpasswd/kpasswdd.8
+++ b/kpasswd/kpasswdd.8
@@ -1,6 +1,6 @@
 .\" $Id$
 .\"
-.Dd Aug 27, 1997
+.Dd April 19, 1999
 .Dt KPASSWDD 8
 .Os HEIMDAL
 .Sh NAME
@@ -9,17 +9,52 @@
 Kerberos 5 password changing server
 .Sh SYNOPSIS
 .Nm
+.Op Fl -check-library= Ns Ar library
+.Op Fl -check-function= Ns Ar function
 .Sh DESCRIPTION
 .Nm
-servers request for password changes. It listens on UDP port 464
+serves request for password changes. It listens on UDP port 464
 (service kpasswd) and processes requests when they arrive. It changes
 the database directly and should thus only run on the master KDC.
+.Pp
+Supported options:
+.Bl -tag -width Ds
+.It Xo
+.Fl -check-library= Ns Ar library
+.Xc
+If your system has support for dynamic loading of shared libraries,
+you can use an external function to check password quality. This
+option specifies which library to load.
+.It Xo
+.Fl -check-function= Ns Ar function
+.Xc
+This is the function to call in the loaded library. The function
+should look like this:
+.Pp
+.Ft const char *
+.Fn passwd_check "krb5_context context" "krb5_principal principal" "krb5_data *password"
+.Pp
+.Fa context
+is an initialized context;
+.Fa principal
+is the one who tries to change passwords, and
+.Fa password
+is the new password. Note that the password (in
+.Fa password->data )
+is not zero terminated.
+.El
 .Sh DIAGNOSTICS
 If an error occurs, the error message is returned to the user and/or
 logged to syslog.
 .Sh BUGS
-The password quality checks are too basic. It should probably use
-cracklib or something similar.
+The default password quality checks are too basic.
 .Sh SEE ALSO
 .Xr kdc 8 ,
 .Xr kpasswd 1
+.\".Sh ENVIRONMENT
+.\".Sh FILES
+.\".Sh EXAMPLES
+.\".Sh SEE ALSO
+.\".Sh STANDARDS
+.\".Sh HISTORY
+.\".Sh AUTHORS
