--- a/cf/ChangeLog
+++ b/cf/ChangeLog
@@ -1,3 +1,8 @@
+1999-04-19  Assar Westerlund  <assar@sics.se>
+
+	* test-package.m4: try to handle the case of --without-package
+ 	correctly
+
 1999-04-17  Assar Westerlund  <assar@sics.se>
 
 	* make-aclocal: removed.  Not used anymore, being replaced by
